--- a/컴그실습/컴그실습/컴그실습.vcxproj.filters
+++ b/컴그실습/컴그실습/컴그실습.vcxproj.filters
@@ -78,5 +78,8 @@
     <ClCompile Include="실습20.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="실습21.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
