--- a/컴그실습/컴그실습/컴그실습.vcxproj.filters
+++ b/컴그실습/컴그실습/컴그실습.vcxproj.filters
@@ -102,5 +102,11 @@
     <ClCompile Include="실습28.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="실습29.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="실습30.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
